--- a/js/templates/episode.html
+++ b/js/templates/episode.html
@@ -11,10 +11,10 @@
             <div class="episode-modal-cover">
                 <img src="{{artworkUrl100}}"/>
             </div>
-            <div class=""episode-modal-info>
-                <div>{{convertDuration}}</div>
-                <div>{{longDescription}}</div>
-                <div>{{trackPrice}}</div>
+            <div class="episode-modal-info">
+                <div>Duration: {{convertDuration}}</div>
+                <div>Summary: {{longDescription}}</div>
+                <div>Price: {{trackPrice}}</div>
             </div>
         </div>
         <div class="episode-modal-content-right">
