--- a/css/episode.css
+++ b/css/episode.css
@@ -2,6 +2,30 @@ html{
     font-family: "Helvetica Neue";
 }
 
+.Episode-modal {
+    font-size: 1em;
+    color: darkgrey;
+    /* display: none; */ /* Hidden by default */
+    position: fixed; /* Stay in place */
+    z-index: 1; /* Sit on top */
+    margin: 4% 4%;
+    left: 0;
+    /* right: 0; */
+    top: 0;
+    width: 92%; /* Full width */
+    height: 85%; /* Full height */
+    overflow: auto; /* Enable scroll if needed */
+    background-color: #2a2828; /* Fallback color */
+    /* background-color: rgba(0,0,0,0.9); */ /* Black w/ opacity */
+}
+
+.episode-modal-content {
+    display: flex;
+    flex-direction: column-reverse;
+    margin-top: 3em;
+    margin-bottom: 2em;
+    font-size: .8em;
+}
 
 @media screen and (min-width: 768px) {
 
@@ -61,6 +85,8 @@ html{
     }
 
     .episode-modal-content {
+        display: flex;
+        flex-direction: row;
         margin-top: 3em;
         margin-bottom: 2em;
         font-size: .8em;
