--- a/css/episode.css
+++ b/css/episode.css
@@ -2,18 +2,40 @@ html{
     font-family: "Helvetica Neue";
 }
 
+.close-button {
+    margin-bottom: -1em;
+    width: 30px;
+    height: 30px;
+    position:relative;
+    float:right;
+}
+
+.episode-modal-title {
+    color: white;
+    font-size: 1.8em;
+    margin-top: 1em;
+    margin: 0.5em .5em 0 .5em;
+    border-bottom: solid 1px white;
+}
+
+.episode-modal-season {
+    margin: .3em 1em 0 1em;
+    font-size: 0.9em;
+}
+
 .Episode-modal {
+    border: solid 1px black;
     font-size: 1em;
     color: darkgrey;
     /* display: none; */ /* Hidden by default */
     position: fixed; /* Stay in place */
     z-index: 1; /* Sit on top */
-    margin: 4% 4%;
+    margin: 26% 4%;
     left: 0;
     /* right: 0; */
     top: 0;
     width: 92%; /* Full width */
-    height: 85%; /* Full height */
+    height: 82%; /* Full height */
     overflow: auto; /* Enable scroll if needed */
     background-color: #2a2828; /* Fallback color */
     /* background-color: rgba(0,0,0,0.9); */ /* Black w/ opacity */
@@ -25,6 +47,15 @@ html{
     margin-top: 3em;
     margin-bottom: 2em;
     font-size: .8em;
+}
+
+.episode-modal-content-left {
+    display: flex;
+}
+
+.episode-modal-info span {
+    color: white;
+    font-size: 1em;
 }
 
 @media screen and (min-width: 768px) {
@@ -98,6 +129,8 @@ html{
     }
 
     .episode-modal-content-left {
+        display: flex;
+        flex-direction: column;
         margin-left: 1.5em;
         width: 30%;
     }
