--- a/css/episode.css
+++ b/css/episode.css
@@ -44,7 +44,7 @@ html{
 .episode-modal-content {
     display: flex;
     flex-direction: column-reverse;
-    margin-top: 3em;
+    margin-top: 1em;
     margin-bottom: 2em;
     font-size: .8em;
 }
@@ -58,8 +58,32 @@ html{
     font-size: 1em;
 }
 
+.episode-modal-info {
+    margin-left: 1em;
+}
+
+.episode-modal-cover {
+    margin-left: 1em;
+}
+
+
 @media screen and (min-width: 768px) {
 
+    .Episode-modal {
+        border: solid 1px black;
+        font-size: 2em;
+        margin: 20% 4%;
+        width: 92%; /* Full width */
+        height: 82%; /* Full height */
+    }
+
+    .episode-modal-cover {
+        width: 100%;
+    }
+
+    .episode-modal-cover img {
+        width: 100%;
+    }
 
 }
 
@@ -111,6 +135,10 @@ html{
         /* background-color: rgba(0,0,0,0.9); */ /* Black w/ opacity */
     }
 
+    .episode-modal-cover {
+        margin: 0;
+    }
+
     .episode-modal-cover img {
         width: 80%;
     }
@@ -136,11 +164,12 @@ html{
     }
 
     .episode-modal-info {
+        margin-left:0;
         width: 80%;
     }
 
     .episode-modal-info span {
-        color: white;
+        color: #0085FF;
         font-size: .9em;
     }
 
