--- a/css/episodes-thumbnail.css
+++ b/css/episodes-thumbnail.css
@@ -58,7 +58,7 @@
 
 .episode-title {
     font-size: 95%;
-    color: #634ED5;
+    color: #0085FF;
     margin-top: 0;
     margin-bottom: 0;
     min-width: 0;
