--- a/css/actor.css
+++ b/css/actor.css
@@ -39,9 +39,13 @@
 }
 
 #description {
-    width: 100%;
+    width: 90%;
+    margin: 0 5%;
 }
 
+.description-header {
+    margin: 0 5%;
+}
 .movie-list {
     max-width: 100%;
 }
@@ -53,12 +57,14 @@
 .genre{
     font-size: 140%;
     font-weight: bold;
+    margin-left: 2%;
 }
 #text{
     font-size: 120%;
 }
 #header{
     font-size: 200%;
+    margin-left: 2%;
 }
 /*Fin du texte*/
 
@@ -96,8 +102,8 @@
 
     height: 100%;
     max-width: 50%;
-
 }
+
 /*Fin Section movie*/
 
 /*Pour la tablette*/
@@ -107,6 +113,7 @@
     #description {
         float: right;
         width: 65%;
+        margin: 0;
 
     }
     .actor-itunes {
@@ -147,9 +154,11 @@
     .genre {
         font-size: 170%;
     }
+ 
 }
 
 @media screen and (min-width: 960px){
+
     #header{
         font-size: 200%;
         margin-left: 7%;
