--- a/css/actors-thumbnail.css
+++ b/css/actors-thumbnail.css
@@ -38,6 +38,8 @@
 }
 
 
+
+
 @media screen and (min-width: 640px) {
     .shortBio{
         font-size: 150%;
@@ -49,8 +51,10 @@
         font-size: 170%;
     }
     .imageThumbnail{
-        height:50%;
+        height: 25%;
         width: auto;
+        max-width: 200px;
+        max-height: 200px;
     }
 }
 
@@ -62,7 +66,6 @@
     }
 
     .imageThumbnail{
-        width: 10%;
         max-width: 600px;
         height: auto;
         max-height: 200px;
