--- a/js/templates/actor.html
+++ b/js/templates/actor.html
@@ -19,7 +19,7 @@
         </div>
 
         <div>
-            <h2> Description :</h2>
+            <h2 class="description-header"> Description :</h2>
             <div id="description">{{biography}} </div>
         </div>
 
