Add itunes link

--- a/js/templates/episode.html
+++ b/js/templates/episode.html
@@ -18,6 +18,7 @@
                 <div><span>Duration: </span>{{convertDuration}}</div>
                 <div><span>Summary: </span>{{longDescription}}</div>
                 <div><span>Price: </span>{{trackPrice}}</div>
+                <div class="itunes-link"></div>
             </div>
         </div>
         <div class="episode-modal-content-right">
