Search almost operational!

--- a/js/templates/navigationBar.html
+++ b/js/templates/navigationBar.html
@@ -23,12 +23,14 @@
             <div class="input-bar">
 
                 <input placeholder="Search..." class="search-input">
+                <div id="initialise-search">
                 <span class="go-research">
-                    <div id="search-icon" style="background-image: url(img/searchIcons/food.svg);"></div>
+                    <div id="search-icon" href="#search" style="background-image: url(img/searchIcons/food.svg);"></div>
                 </span>
+                </div>
                 <button class="member-hamburger">
                     <div class="username toggle-member-menu">{{user}}</div>
-                    <img class="user-icon toggle-member-menu" />
+                    <img class="user-icon toggle-member-menu"/>
                 </button>
             </div>
             <div class="research-options collapsed">advanced research</div>
