--- a/js/templates/seachGroup.html
+++ b/js/templates/seachGroup.html
@@ -1,5 +1,5 @@
 
-{{#for group}}
+{{#each group}}
     <h1>{{name}}</h1>
-    <div id="{{name}}-searchResult"></div>
-{{/for}}
+    <div id="{{name}}-search-result"></div>
+{{/each}}
