--- a/js/templates/thumbnail.html
+++ b/js/templates/thumbnail.html
@@ -1,12 +1,12 @@
 {{#if isActorType}}
 <div class="actorThumbnail">
-    <img id="idTmpImg" class="imageThumbnail" src="{{imgActor}}">
+    <img id="{{imageId}}" class="imageThumbnail" src="{{imgActor}}">
     <div class="descriptionThumbnail">
         <h2 class="thumbnailNomArtist">
             <a class="actor-box" href="#actor/{{artistId}}">{{artistName}}</a>
         </h2>
         <div class="genreActorThumbnail"> Genre : {{primaryGenreName}}</div>
-        <div id="idTmpBio" class="shortBio">{{shortenBio}}</div>
+        <div id="{{bioId}}" class="shortBio">{{shortenBio}}</div>
     </div>
 </div>
 
