--- a/js/templates/episode.html
+++ b/js/templates/episode.html
@@ -18,7 +18,11 @@
                 <div><span>Duration: </span>{{convertDuration}}</div>
                 <div><span>Summary: </span>{{longDescription}}</div>
                 <div><span>Price: </span>{{trackPrice}}</div>
-                <div class="itunes-link"></div>
+                <span>
+                    <a class="itunes-link" href="{{trackViewUrl}}">
+                        <img class="itunes-logo" src="url(../../img/itunesLogo2.png">
+                    </a>
+                </span>
             </div>
         </div>
         <div class="episode-modal-content-right">
