--- a/css/episodes-thumbnail.css
+++ b/css/episodes-thumbnail.css
@@ -30,7 +30,6 @@
     display: flex;
     flex-direction: row;
     align-items: stretch;
-
 }
 
 .episode-initial-image {
@@ -46,6 +45,7 @@
 .episode-thumbnail {
     align-items: stretch;
     height: 100%;
+    width: 6em;
 }
 
 .episode-top-box {
@@ -79,10 +79,12 @@
 }
 
 .episode-footer {
-    color: #97999F;
-    font-size: 90%;
     display: flex;
     justify-content: space-between;
+}
+
+.episode-footer .content-advisory-rating, .episode-footer .duration {
+    color: #97999F;
 }
 
 .ellipsis {
@@ -91,26 +93,13 @@
 
 @media screen and (min-width: 640px) {
 
-}
-
-@media screen and (min-width: 970px) {
-
     .episode-box{
-        font-family: "Open Sans", "Droid Sans", "Helvetica Neue", Helvetica, sans-serif;
         background-color: #171717;
-        transition: opacity ease-in-out .55s;
-        border: 3px solid #1B1D22;
-        border-bottom: none;
-        text-decoration: none;
-        overflow: hidden;
-        display: flex;
-        flex-direction: column;
-        flex: 1 1 auto;
-        justify-content: center;
         align-items: center;
     }
 
     .thumbnail {
+        min-height: 0em;
         width: 100%;
         margin-left: 0;
         max-width: none;
@@ -118,6 +107,24 @@
 
     .episode-top-box{
         flex: 1 1 100%;
+    }
+
+    .episode-footer {
+        color: #BFC2CC;
+        font-size: 1.2em;
+    }
+}
+
+@media screen and (min-width: 970px) {
+
+    .episode-box{
+        background-color: #222121;
+        overflow: hidden;
+        display: flex;
+    }
+
+    .episode-box:nth-child(even) {
+        background-color: #505154;
     }
 
 }
