--- a/css/movies-seasons-thumbnail.css
+++ b/css/movies-seasons-thumbnail.css
@@ -72,6 +72,10 @@
     white-space: nowrap;
 }
 
+.movies-header {
+    color: #B2B5BB;
+}
+
 .movies-footer {
     color: #97999F;
     font-size: 90%;
@@ -118,6 +122,7 @@
     }
 
     .movies-header, .movies-description, .movies-footer {
+        color: black;
         flex: 1;
         height: 100%;
     }
@@ -189,14 +194,6 @@
         display: flex;
         flex-direction: row;
         padding: 0 0.3em 0 0.3em;
-    }
-
-    .content-advisory-rating {
-
-    }
-
-    .duration {
-
     }
 
     .content-advisory-rating, .duration {
