--- a/css/movie-season.css
+++ b/css/movie-season.css
@@ -45,7 +45,7 @@ html{
 .cover-thumbnail img {
     margin-top: -20%;
     padding: 1em 1em 0.6em 0.6em;
-    width: 6.5em;
+    width: 7.3em;
 }
 
 .main-info div {
@@ -259,6 +259,15 @@ iframe {
     margin-top: 5%;
 }
 
+.desktop {
+    display: none;
+}
+
+.mobile .itunes-logo {
+    margin-top: 0.1em;
+    margin-left: -0.9em;
+}
+
 @media screen and (min-width: 768px) {
     .page-box {
         font-size: 2em;
@@ -266,7 +275,11 @@ iframe {
 
     .cover-thumbnail img {
         width:220px;
-        height:280px;
+    }
+
+
+    .mobile img {
+        width: 11em;
     }
 
     .element-name {
@@ -296,6 +309,11 @@ iframe {
 
     .detailed-info {
         padding-top: 1.5%;
+    }
+
+    .mobile .itunes-logo {
+        margin-top: 0.1em;
+        margin-left: 0em;
     }
 
 }
@@ -455,6 +473,26 @@ iframe {
 
     .watchlist-menu-group {
         width: 18%;
+    }
+
+    .title-box {
+        display: flex;
+        flex-direction: row;
+    }
+
+    .mobile {
+        display: none;
+    }
+
+    .desktop {
+        display: inline;
+    }
+
+    .desktop .itunes-logo {
+        margin-top: 0;
+        margin-left: 1em;
+        width: 5.5em;
+        height: 2em;
     }
 
     /* Episodes box */
