--- a/css/general-content.css
+++ b/css/general-content.css
@@ -3,6 +3,10 @@ html {
     color: white;
 }
 
+html {
+    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+}
+
 div #content {
     width: 100%;
     max-width: 900px;
@@ -79,7 +83,6 @@ button {
 
 @media (min-width: 960px) {
     html {
-        font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
         font-size: 1.6vw;
         -moz-osx-font-smoothing: grayscale;
     }
