--- a/css/episodes-thumbnail.css
+++ b/css/episodes-thumbnail.css
@@ -37,7 +37,7 @@
     margin: 0;
     padding: 0;
     align-items: stretch;
-    flex: 1 1 auto;
+    /* flex: 1 1 auto; */
     height: 100%;
     background-size: 0;
 }
@@ -94,7 +94,6 @@
     display: none;
 }
 
-
 @media screen and (min-width: 640px) {
 
     .episode-box{
@@ -135,6 +134,7 @@
 
     .episode-top-box{
         flex: 1 1 100%;
+        margin-right: 1em;
     }
 
     .episode-box:nth-child(even) {
