Minor refactor on search display and colors

--- a/js/templates/seachGroup.html
+++ b/js/templates/seachGroup.html
@@ -1,5 +1,6 @@
-
+<div class="search-results-display">
 {{#each group}}
     <h1>{{name}}</h1>
     <div id="{{name}}-search-result">Sorry, no results were found for this request... Please try again!</div>
 {{/each}}
+</div>
