Work in progress on CSS preformating to make place for the types + mini class on flexbox for Alex

--- a/css/search-results.css
+++ b/css/search-results.css
@@ -8,5 +8,11 @@
     .search-results-display {
         align-items: center;
     }
+
+    .text-researched {
+        align-self: flex-start;
+        margin-left: 4em;
+        color: white;
+    }
 }
 
