--- a/js/templates/seachGroup.html
+++ b/js/templates/seachGroup.html
@@ -1,4 +1,5 @@
 <div class="search-results-display">
+    <div class="text-researched">Showing Results For : {{searchWord}}</div>
 {{#each group}}
     <h1>{{name}}</h1>
     <div id="{{name}}-search-result">Sorry, no results were found for this request... Please try again!</div>
