--- a/css/navigation-bar.css
+++ b/css/navigation-bar.css
@@ -380,7 +380,7 @@
 }
 
 .search-bar {
-    padding-top: 4em;
+    padding-top: 6em;
     padding-bottom: 1em;
     position: relative;
 }
@@ -392,6 +392,7 @@
     margin-right: auto;
     margin-left: auto;
     margin-top: 5%;
+    display: inline;
 }
 
 .search-input {
@@ -532,6 +533,30 @@
         z-index: 1;
     }
 
+
+    .member-hamburger {
+
+        display: flex;
+        position: initial;
+        flex-wrap: nowrap;
+        z-index: auto;
+        cursor: default;
+    }
+
+    .member-hamburger img {
+        background-color: transparent;
+        width: 2.5vw;
+        height: 2.5vw;
+        float: none;
+        margin-right: 2em;
+        cursor: pointer;
+    }
+
+    .username{
+        font-size: 1.6vw;
+    }
+
+
     /* ------ Left side nav-bar ------ */
     .umovie-logo {
         background: none;
@@ -615,8 +640,10 @@
     /* ------ Right side nav-bar ------ */
     .search-bar {
         display: inline-flex;
-        padding: 2em 1em 0.5em;
-        float: right;
+        flex-direction: column;
+        align-items: center;
+        padding: 0 0 0 0;
+        float: none;
         width: 26em;
     }
 
@@ -639,10 +666,6 @@
 
 @media (min-width: 960px) {
 
-    .search-bar {
-        padding: 1em 1em 0.5em;
-    }
-
     .member-menu {
         z-index: 1000;
         height: 900px;
@@ -650,6 +673,7 @@
 
     .search-container {
         width: 100%;
+        display: inline;
     }
 
     .navigation-bar {
