--- a/css/general-content.css
+++ b/css/general-content.css
@@ -31,7 +31,7 @@ button {
 }
 
 .text h1, h2 {
-    color: #FFCC00;
+    color: #0085FF;
 }
 
 #container {
@@ -67,7 +67,7 @@ button {
     }
 
     .text h1, h2 {
-        color: #FFCC00;
+        color: #0085FF;
     }
 
     .text h1 {
