--- a/css/login-page.css
+++ b/css/login-page.css
@@ -1,25 +1,33 @@
-.movie-banner {
+.background {
     width: 100%;
     height: auto;
 }
 
-.inputFields {
-    margin-right: auto;
+.authentication {
+    min-height: 8em;
+    color: black;
+    display: flex;
+    flex-direction: column;
+    width: 10em;
     margin-left: auto;
+    margin-right: auto;
+    margin-top: -15.6em;
+}
+
+.inputFields {
+    min-height: 4em;
     width: 100%;
-    max-width: 10.3em;
-    padding-bottom: 0.5em;
+    padding-bottom: 0em;
 }
 
 .-box {
-    width: 160px;
+    width: 100%;
+    /* max-height: 5em; */
 }
 
 .newEntry {
     width: 100%;
-    max-width: 19em;
-    margin-right: auto;
-    margin-left: auto;
+    text-align: center;
 }
 
 .switch-authentication {
@@ -29,53 +37,107 @@
     margin-left: auto;
 }
 
-.authentification img {
+.authentication img {
+    width: 100%;
+}
+
+.authentication input {
     width: 100%;
 }
 
 .submitAuthentication {
-    padding: 1.2% 7%;
-    border: 1px solid #000000;
-    background: -webkit-gradient(linear, left top, left bottom, from(#E8A023), to(#FFBB00));
-    background: -webkit-linear-gradient(top, #E8A023, #FFBB00);
-    background: -moz-linear-gradient(top, #E8A023, #FFBB00);
-    background: -ms-linear-gradient(top, #E8A023, #FFBB00);
-    background: -o-linear-gradient(top, #E8A023, #FFBB00);
-    background-color: #FFBB00;
-    box-shadow: 0px 7px 2px -5px #1A1A1A, inset 0px 0px 3px #99CC00;
-    -webkit-box-shadow: 0px 7px 2px -5px #1A1A1A, inset 0px 0px 3px #99CC00;
-    -moz-box-shadow: 0px 7px 2px -5px #1A1A1A, inset 0px 0px 3px #99CC00;
-    -webkit-border-radius: 5px;
-    -moz-border-radius: 5px;
-    border-radius: 5px;
-    text-shadow: #FFFF77 1px 1px 0px;
-    color: #000000;
-    font-family: Helvetica;
-    text-decoration: none;
-    font-weight: bold;
-    -webkit-transition: 0.2s;
-    -moz-transition: 0.2s;
-    -o-transition: 0.2s;
-    cursor: pointer;
+    background:-webkit-gradient(linear, left top, left bottom, color-stop(0.05, #2dabf9), color-stop(1, #0688fa));
+    background:-moz-linear-gradient(top, #2dabf9 5%, #0688fa 100%);
+    background:-webkit-linear-gradient(top, #2dabf9 5%, #0688fa 100%);
+    background:-o-linear-gradient(top, #2dabf9 5%, #0688fa 100%);
+    background:-ms-linear-gradient(top, #2dabf9 5%, #0688fa 100%);
+    background:linear-gradient(to bottom, #2dabf9 5%, #0688fa 100%);
+    filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#2dabf9', endColorstr='#0688fa',GradientType=0);
+    background-color:#2dabf9;
+    -moz-border-radius:26px;
+    -webkit-border-radius:26px;
+    border-radius:26px;
+    border: 1px solid #0b0e07;
+    display:inline-block;
+    cursor:pointer;
+    color:#ffffff;
+    font-family:Arial;
+    font-size: 1em;
+    /* text-align: center; */
+    /* margin-left: auto; */
+    /* margin-right: auto; */
+    /* width: 4em; */
+    padding: 0.2em 1.7em;
+    text-decoration:none;
+    text-shadow:0px 0px 0px #263666;
 }
-
 .submitAuthentication:hover {
-    background: none;
-    background-color: #FFBB00;
-    box-shadow: 0px 0px 5px 0px #AAAAAA;
-    -webkit-box-shadow: 0px 0px 5px 0px #AAAAAA;
-    -moz-box-shadow: 0px 0px 5px 0px #AAAAAA;
-    border: 1px solid #ffffff;
-    color: #770400;
+    background:-webkit-gradient(linear, left top, left bottom, color-stop(0.05, #0688fa), color-stop(1, #2dabf9));
+    background:-moz-linear-gradient(top, #0688fa 5%, #2dabf9 100%);
+    background:-webkit-linear-gradient(top, #0688fa 5%, #2dabf9 100%);
+    background:-o-linear-gradient(top, #0688fa 5%, #2dabf9 100%);
+    background:-ms-linear-gradient(top, #0688fa 5%, #2dabf9 100%);
+    background:linear-gradient(to bottom, #0688fa 5%, #2dabf9 100%);
+    filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#0688fa', endColorstr='#2dabf9',GradientType=0);
+    background-color:#0688fa;
+}
+.submitAuthentication:active {
+    position:relative;
+    top:1px;
 }
 
-.submitAuthentication:active {
-    top: 1px;
-    position: relative;
+
+.login-titles {
+    font-size: 1.1em;
+    margin-top: 4em;
+    text-align: center;
+    /* line-height: 1.9em; */
+}
+
+.login-titles h1{
+    margin: 0;
+    font-size: 1.8em;
+}
+
+.login-desktop {
+    display: none;
+}
+
+@media (min-width: 640px) {
+    .authentication {
+        width: 27em;
+        margin-top: -43em;
+    }
+
+    .inputFields input{
+        font-size: 1.6em;
+        min-height: 1.5em;
+        /* width: 100%; */
+        padding-bottom: 1em;
+    }
+
+
+    .inputFields{
+        min-height: 14em;
+    }
+
+    .submitAuthentication {
+        font-size: 2.5em;
+        padding: 0.2em 2em;
+    }
+
+    .switch-authentication {
+        font-size: 2.2em;
+        margin-bottom: 3.7em;
+    }
+
+    .login-titles {
+        font-size: 1.4em;
+    }
 }
 
 @media (min-width: 960px) {
-    .authentification {
+    .authentication {
         background-color: black;
         opacity: 0.6;
         color: white;
@@ -102,12 +164,20 @@
         left: 25%;
     }
 
-    .authentification input {
+    .authentication input {
         background-color: white;
         margin: 0.7em;
         margin-left: auto;
         margin-right: auto;
         width: 100%;
         height: 3em;
+    }
+
+    .login-mobile {
+        display: none;
+    }
+
+    .login-desktop {
+        display: flex;
     }
 }
