--- a/css/login-page.css
+++ b/css/login-page.css
@@ -134,6 +134,20 @@
     .login-titles {
         font-size: 1.4em;
     }
+
+    .text h1, h2 {
+        color: #0085FF;
+    }
+
+    .text h1 {
+        font-size: 4.1em;
+        text-align: center;
+    }
+
+    .text h2 {
+        text-align: center;
+        font-size: 1.6em;
+    }
 }
 
 @media (min-width: 960px) {
@@ -141,14 +155,13 @@
         background-color: black;
         opacity: 0.6;
         color: white;
-        text-align: center;
-        width: 20em;
+        width: 13em;
+        /* margin-top: 0.1em; */
+        margin-left: auto;
+        margin-right: auto;
         height: 12em;
-        position: absolute;
-
-        top: 35%;
-        left: 63%;
-
+        /* margin: 0; */
+        /* padding: 0; */
         border-top-left-radius: 1.2em;
         border-bottom-left-radius: 1.2em;
         border-top-right-radius: 1.2em;
@@ -156,21 +169,44 @@
         border: solid 1px black;
     }
 
-    .connect p {
-        position: absolute;
-        margin-top: -50px;
-        margin-left: -10px;
-        top: 35%;
-        left: 25%;
+    .text h1 {
+        font-size: 3.1em;
+        text-align: center;
+    }
+
+    .login-content {
+        /* margin: 0; */
+        /* margin-top: 0em; */
+        margin-top: 20em;
+    }
+
+    .login-titles {
+        margin: 0;
+        padding: 0;
+        margin-top: 2em;
+    }
+
+    .inputFields{
+        min-height: 6em;
     }
 
     .authentication input {
+        font-size: .5em;
         background-color: white;
-        margin: 0.7em;
+        /* margin: 0.7em; */
         margin-left: auto;
         margin-right: auto;
         width: 100%;
-        height: 3em;
+        height: 0;
+    }
+
+    .switch-authentication {
+        font-size: 1em;
+    }
+
+    .submitAuthentication {
+        font-size: 1em;
+        padding: 0.2em 1.5em;
     }
 
     .login-mobile {
@@ -178,6 +214,7 @@
     }
 
     .login-desktop {
+        margin-top: -6em;
         display: flex;
     }
 }
