--- a/css/actors-thumbnail.css
+++ b/css/actors-thumbnail.css
@@ -56,7 +56,7 @@
         height: 25%;
         width: auto;
         max-width: 200px;
-        max-height: 200px;
+
     }
 }
 
@@ -68,9 +68,11 @@
     }
 
     .imageThumbnail{
+
+        width: 12%;
         max-width: 600px;
-        height: auto;
-        max-height: 200px;
+        height: 98%;
+
     }
 
     .thumbnailNomArtist {
