Start genre filter

--- a/js/templates/seachGroup.html
+++ b/js/templates/seachGroup.html
@@ -1,7 +1,10 @@
+
 <div class="search-results-display">
+
     <div class="text-researched">Showing Results For : {{searchWord}}</div>
 {{#each group}}
     <h1>{{name}}</h1>
+    <div id="{{name}}-genre"></div>
     <div id="{{name}}-search-result">Sorry, no results were found for this request... Please try again!</div>
 {{/each}}
 </div>
