--- a/css/general-content.css
+++ b/css/general-content.css
@@ -39,7 +39,7 @@ button {
     flex-direction: column;
 }
 
-@media (min-width: 640px) {
+@media screen and (min-width: 640px) {
     html {
         font-size: 1.6vw;
         -moz-osx-font-smoothing: grayscale;
@@ -68,7 +68,7 @@ button {
 
 }
 
-@media (min-width: 960px) {
+@media screen and (min-width: 960px) {
     html {
         font-size: 1.6vw;
         -moz-osx-font-smoothing: grayscale;
