--- a/css/login-page.css
+++ b/css/login-page.css
@@ -22,7 +22,6 @@
 
 .-box {
     width: 100%;
-    /* max-height: 5em; */
 }
 
 .newEntry {
@@ -63,10 +62,6 @@
     color:#ffffff;
     font-family:Arial;
     font-size: 1em;
-    /* text-align: center; */
-    /* margin-left: auto; */
-    /* margin-right: auto; */
-    /* width: 4em; */
     padding: 0.2em 1.7em;
     text-decoration:none;
     text-shadow:0px 0px 0px #263666;
@@ -91,7 +86,6 @@
     font-size: 1.1em;
     margin-top: 4em;
     text-align: center;
-    /* line-height: 1.9em; */
 }
 
 .login-titles h1{
@@ -103,7 +97,7 @@
     display: none;
 }
 
-@media (min-width: 640px) {
+@media screen and (min-width: 640px) {
     .authentication {
         width: 27em;
         margin-top: -43em;
@@ -150,18 +144,16 @@
     }
 }
 
-@media (min-width: 960px) {
+@media screen and (min-width: 960px) {
     .authentication {
         background-color: black;
         opacity: 0.6;
         color: white;
-        width: 13em;
-        /* margin-top: 0.1em; */
+        width: 12em;
+        margin-top: -21.9em;
         margin-left: auto;
         margin-right: auto;
         height: 12em;
-        /* margin: 0; */
-        /* padding: 0; */
         border-top-left-radius: 1.2em;
         border-bottom-left-radius: 1.2em;
         border-top-right-radius: 1.2em;
@@ -175,33 +167,35 @@
     }
 
     .login-content {
-        /* margin: 0; */
-        /* margin-top: 0em; */
-        margin-top: 20em;
+        margin-top: 0em;
     }
 
     .login-titles {
+        font-size: 1.2em;
         margin: 0;
         padding: 0;
-        margin-top: 2em;
+        margin-top: 1em;
+        height: 0em;
     }
 
     .inputFields{
+        width: 10em;
+        margin-top: 1em;
+        margin-left: auto;
+        margin-right: auto;
         min-height: 6em;
     }
 
     .authentication input {
-        font-size: .5em;
+        font-size: .6em;
         background-color: white;
-        /* margin: 0.7em; */
         margin-left: auto;
         margin-right: auto;
-        width: 100%;
         height: 0;
     }
 
     .switch-authentication {
-        font-size: 1em;
+        font-size: 0.8em;
     }
 
     .submitAuthentication {
@@ -216,5 +210,29 @@
     .login-desktop {
         margin-top: -6em;
         display: flex;
+    }
+}
+
+@media screen and (min-width: 361px) and (max-width: 640px){
+    .authentication{
+        margin-top: -26em;
+    }
+
+    .login-titles {
+        font-size: 0.85em;
+        width: 22em;
+        margin-left: auto;
+        margin-right: auto;
+        margin-top: .6em;
+    }
+}
+
+@media screen and (min-width: 961px) and (max-width: 1024px){
+    .authentication{
+        margin-top: -10em;
+    }
+
+    .login-titles {
+        margin-top: 0em;
     }
 }
