Trying to remove some elements from the navigation bar in the login page when not connected

--- a/css/navigation-bar.css
+++ b/css/navigation-bar.css
@@ -44,6 +44,11 @@
     overflow: auto;
 }
 
+.umovie-logo-disconnect #site-logo {
+    width: 5em;
+    padding-top: 0em;
+}
+
 .header {
     margin: 0;
     padding: 0;
@@ -518,7 +523,22 @@
 @media (min-width: 640px) {
 
     /* ------ NAV-BAR  ----- */
-    .navigation-bar {
+    .navigation-bar{
+        box-shadow: 0 10px 10px 1px rgba(0, 0, 0, 1);
+        box-sizing: border-box;
+        padding: 0 3%;
+        width: 100%;
+        background-color: black;
+        opacity: 0.88;
+        display: inline-flex;
+        position: fixed;
+        top: 0;
+        margin: 0;
+        z-index: 1;
+    }
+
+    .navigation-bar-disconnect {
+        height: 3em;
         box-shadow: 0 10px 10px 1px rgba(0, 0, 0, 1);
         box-sizing: border-box;
         padding: 0 3%;
