Adding the gravatar in the navigation bar

--- a/js/templates/navigationBar.html
+++ b/js/templates/navigationBar.html
@@ -56,5 +56,8 @@
     <div class="umovie-logo-disconnect">
         <a href="#{{references}}"><img id="site-logo" src="url({{siteImageUrl}}"></a>
     </div>
+    <button class="member-hamburger">
+        <img class="user-icon toggle-member-menu"/>
+    </button>
 </div>
 {{/if}}
