--- a/css/movie-season.css
+++ b/css/movie-season.css
@@ -40,7 +40,7 @@
 .cover-thumbnail img {
     margin-top: -15%;
     padding: 1em 1em 0.6em 1.2em;
-    width: 7.3em;
+    width: 10.3em;
 }
 
 .main-info div {
@@ -261,6 +261,7 @@ iframe {
 .mobile .itunes-logo {
     margin-top: 0.1em;
     margin-left: -0.9em;
+    width: 7em;
 }
 
 @media screen and (min-width: 768px) {
@@ -269,7 +270,7 @@ iframe {
     }
 
     .cover-thumbnail img {
-        width:220px;
+        width: 28em;
     }
 
     .cover-thumbnail span:first-child {
@@ -310,6 +311,9 @@ iframe {
         justify-content: center;
     }
 
+    .mobile .itunes-logo {
+        width: 12em;
+    }
     .detailed-info {
         padding-top: 1.5%;
     }
@@ -319,7 +323,7 @@ iframe {
     }
 
     .container-down-section {
-        font-size: 2em;
+        font-size: 3em;
     }
 
     .watchlist-button {
@@ -355,7 +359,7 @@ iframe {
 
     .element-title {
         display: block;
-        margin: 0 0 2% 43%;
+        margin: 0 8% 1% 17%;
         font-size: 1.5em;
         color: darkgray;
     }
@@ -374,8 +378,8 @@ iframe {
     }
 
     .cover-thumbnail img {
-        width: 265px;
-        height: 370px;
+        width: 14em;
+        height: 19em;
     }
 
     .cover-thumbnail, .cover-thumbnail title {
@@ -397,7 +401,7 @@ iframe {
 
     .cover-thumbnail {
         display: block;
-        margin-left: 15%;
+        margin-left: 2.5em;
     }
 
     .cover-thumbnail span {
@@ -412,12 +416,12 @@ iframe {
     .main-info {
         display: block;
         background-color: black;
-        margin-left: 7em;
+        margin-left: 6em;
         font-size: 0.75em;
     }
 
     .summary{
-        padding: 0 10%;
+        padding: 0 4em 0 1em;
         font-size: .35em;
         line-height: 1.7em;
     }
@@ -434,8 +438,7 @@ iframe {
 
     .detailed-info {
         background-color: black;
-        font-size: 14px;
-        margin: 1em 0 0 10%;
+        margin: 0em 0 0 3em;
         min-width: 310px;
     }
 
@@ -453,7 +456,7 @@ iframe {
         display: flex;
         flex-direction: column;
         text-align: -webkit-right;
-        margin: 0 11% 0 0;
+        margin: 3em 1em 0 0;
     }
 
     .detailed-info-subject {
@@ -505,7 +508,10 @@ iframe {
 
     .title-box {
         display: flex;
-        flex-direction: row;
+        flex-direction: row-reverse;
+        justify-content: flex-end;
+        margin-left: 2em;
+        margin-right: 1em;
     }
 
     .mobile {
@@ -513,14 +519,20 @@ iframe {
     }
 
     .desktop {
-        display: inline;
+        display: flex;
+        margin-left: 5em;
     }
 
     .desktop .itunes-logo {
+        align-self: center;
         margin-top: 0;
         margin-left: 1em;
         width: 5.5em;
         height: 2em;
+    }
+
+    .cover-thumbnail img {
+        margin-top: 0;
     }
 
     /* Episodes box */
@@ -537,5 +549,39 @@ iframe {
 @media screen and (min-width: 1034px){
     .preview-box {
         margin-left: 15%;
+    }
+
+    .desktop {
+        margin-left: 7em;
+    }
+
+    .cover-thumbnail img {
+        width: 12em;
+        height: 15em;
+    }
+
+    .cover-thumbnail {
+        display: block;
+        margin-left: 4.5em;
+    }
+
+    .main-info {
+        margin-left: 7em;
+    }
+
+    .container-down-section {
+        font-size: 2em;
+    }
+
+    .detailed-info {
+        background-color: black;
+        margin: 1em 0 0 10%;
+        min-width: 310px;
+    }
+
+    .summary {
+        padding: 0 10%;
+        font-size: .35em;
+        line-height: 1.7em;
     }
 }
