Still got the problem...

--- a/js/templates/Genre.html
+++ b/js/templates/Genre.html
@@ -1,5 +1,5 @@
 
-<div class="conponent-genre">
+<div class="component-genre">
     {{#each genre}}
         <div id="{{name}}"></div>
     {{/each}}
