--- a/css/movie-season.css
+++ b/css/movie-season.css
@@ -492,9 +492,9 @@ iframe {
         margin-left: 2%;
     }
 
-    iframe {
-        width: 100%;
-        height: 300px;
+    .preview-element-video iframe {
+        width: 34em;
+        height: 21em;
     }
 
     .detailed-info {
@@ -548,7 +548,7 @@ iframe {
 
 @media screen and (min-width: 1034px){
     .preview-box {
-        margin-left: 15%;
+        margin-left: 8%;
     }
 
     .desktop {
@@ -577,6 +577,11 @@ iframe {
         background-color: black;
         margin: 1em 0 0 10%;
         min-width: 310px;
+    }
+
+    .preview-element-video iframe {
+        width: 30em;
+        height: 18em;
     }
 
     .summary {
