--- a/js/templates/Genre.html
+++ b/js/templates/Genre.html
@@ -1,6 +1,3 @@
-
-<div class="component-genre">
-    {{#each genre}}
-        <div id="{{name}}"></div>
-    {{/each}}
+<div class="component-genre" genreName="{{name}}">
+    {{name}}
 </div>
