--- a/js/templates/seachGroup.html
+++ b/js/templates/seachGroup.html
@@ -2,10 +2,9 @@
 
     <div class="text-researched">Showing Results For : {{searchWord}}</div>
     {{#each group}}
-    <h1>{{name}}</h1>
+    <h1>{{title}}</h1>
     <div id="{{name}}-search-result">
-
-
+        <div id="{{name}}-search-genre" class="search-genre"></div>
     </div>
     {{/each}}
 </div>
