Starts refactoring community code

--- a/js/templates/memberThumbnail.html
+++ b/js/templates/memberThumbnail.html
@@ -1,9 +1,7 @@
-<div class="actorThumbnail">
-    <img id="gravatar-photo-{{gravatarIdName}}" class="thumbnailImg" src=""/>
+<a class="user-box" href="#member/{{id}}">
+    <img id="gravatar-photo-{{id}}" class="thumbnailImg" src=""/>
     <div class="descriptionThumbnail">
-        <a class="actor-box" href="#member/{{id}}">
-            <h2 class="thumbnailNomArtist">{{name}}</h2>
-        </a>
+        <h2 class="thumbnailNomArtist">{{name}}</h2>
         <div>Email : {{email}}</div>
     </div>
-</div>
+</a>
