--- a/js/templates/user.html
+++ b/js/templates/user.html
@@ -6,7 +6,7 @@
 
         <div class="individual-user-box">
             {{#if isNotCurrentUser}}
-                <button class="follow-unfollow-member">
+                <button class="toggle-following btn">
                     {{#if isFollowing}}
                         Unfollow
                     {{else}}
