--- a/js/templates/memberThumbnail.html
+++ b/js/templates/memberThumbnail.html
@@ -1,7 +1,9 @@
 <a class="user-box" href="#member/{{id}}">
-    <img id="gravatar-photo-{{id}}" class="thumbnailImg" src=""/>
-    <div class="descriptionThumbnail">
-        <h2 class="thumbnailNomArtist">{{name}}</h2>
-        <div>Email : {{email}}</div>
+    <div class="user-thumbnail">
+        <img class="gravatar-photo" data-email="{{email}}" src=""/>
+    </div>
+    <div class="user-info">
+        <p class="user-name">{{name}}</p>
+        <p class="user-email">{{email}}</p>
     </div>
 </a>
