--- a/css/genre.css
+++ b/css/genre.css
@@ -3,9 +3,15 @@
     flex-wrap: wrap;
     flex: 1 1 auto;
     justify-content: space-around;
+    align-items: center;
     margin-bottom: 1em;
 }
 
 .component-genre {
     flex-basis: 10em;
+    margin: 0.2em 0;
+}
+
+.filter-selected {
+    background-color: #59a9f9;
 }
