--- a/css/login-page.css
+++ b/css/login-page.css
@@ -142,6 +142,10 @@
         text-align: center;
         font-size: 1.6em;
     }
+
+    .background {
+        margin-top: 4em;
+    }
 }
 
 @media screen and (min-width: 960px) {
