--- a/css/genre.css
+++ b/css/genre.css
@@ -13,5 +13,14 @@
 }
 
 .filter-selected {
-    background-color: #59a9f9;
+    color: white;
+    text-shadow: -5px -5px 5px #0085E1,
+    -5px 0 5px #0085E1,
+    -5px 5px 5px #0085E1,
+    0 -5px 5px #0085E1,
+    0 0 5px #0085E1,
+    0 5px 5px #0085E1,
+    5px -5px 5px #0085E1,
+    5px 0 5px #0085E1,
+    5px 5px 5px #0085E1;
 }
