--- a/js/templates/navigationBar.html
+++ b/js/templates/navigationBar.html
@@ -52,10 +52,9 @@
     </div>
 </div>
 {{else}}
+<div class="navigation-bar-disconnect">
     <div class="umovie-logo-disconnect">
         <a href="#{{references}}"><img id="site-logo" src="url({{siteImageUrl}}"></a>
     </div>
-    <button class="member-hamburger">
-        <img class="user-icon toggle-member-menu"/>
-    </button>
+</div>
 {{/if}}
