Adds users watchlists

--- a/js/templates/user.html
+++ b/js/templates/user.html
@@ -24,4 +24,8 @@
     <div id="followed-list">
         <h1>Following</h1>
     </div>
+
+    <div id="user-watchlists">
+        <h1>Watchlists</h1>
+    </div>
 </div>
